migrate to template and add prompts for other parts of DOM lesson

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
   <div class="elements">
     <h1 id="first"> Get this element by it's ID </h1>
-    <h1 class="second">Get this element by it's class name</h1>
-    <h1 class="second">Also get this element by it's class</h1>
-    <h1 class="second">Also this element by class</h1>
+    <h1 class="second" data-position="1" data-style="fancy" data-sauce="mumbo">Get this element by it's class name</h1>
+    <h1 class="second" data-position="2">Also get this element by it's class</h1>
+    <h1 class="second" data-position="3">Also this element by class</h1>
     <span>Get this elment by it's tag (element) name</span>
   </div>
 
@@ -42,6 +42,9 @@
   
   <script src="getelements.js"></script>
   <!-- <script src="queryselector.js"></script> -->
+  <!-- <script src="dom_content.js"></script> -->
+  <!-- <script src="classlist.js"></script> -->
+  <!-- <script src="data-attribute.js"></script> -->
 
   
 </body>
