joes solution to lab 1

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
 
   <div class="elements">
-    <h1 id="first"> Get this element by it's ID </h1>
+    <!-- <h1 id="first"> Get this element by it's ID </h1> -->
     <h1 class="second" data-position="1" data-style="fancy" data-sauce="mumbo">Get this element by it's class name</h1>
     <h1 class="second" data-position="2">Also get this element by it's class</h1>
-    <h1 class="second" data-position="3">Also this element by class</h1>
+    <!-- <h1 class="second" data-position="3">Also this element by class</h1> -->
     <span>Get this elment by it's tag (element) name</span>
   </div>
 
@@ -20,6 +20,7 @@
     <span>
       Get this element, but no other span!
     </span>
+    <!-- <span>Joe add a span</span> -->
   </div>
 
   <div>
