joes solution to lab 2

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </div>
   
   <script src="getelements.js"></script>
-  <!-- <script src="queryselector.js"></script> -->
+  <script src="queryselector.js"></script>
   <!-- <script src="dom_content.js"></script> -->
   <!-- <script src="classlist.js"></script> -->
   <!-- <script src="data-attribute.js"></script> -->
