--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 </head>
+
 <body>
 
   <div class="elements">
@@ -15,7 +17,8 @@
     <h1 class="second" data-position="3">Also this element by class</h1>
     <span>Get this elment by it's tag (element) name</span>
   </div>
-
+  <!-- //added -->
+  <!-- <span> new span added by sachin</span> -->
   <div>
     <span>
       Get this element, but no other span!
@@ -39,13 +42,14 @@
       <li data-target="#selecty"></li>
     </ul>
   </div>
-  
-  <script src="getelements.js"></script>
-  <!-- <script src="queryselector.js"></script> -->
+
+  <!-- <script src="getelements.js"></script> -->
+  <script src="queryselector.js"></script>
   <!-- <script src="dom_content.js"></script> -->
   <!-- <script src="classlist.js"></script> -->
   <!-- <script src="data-attribute.js"></script> -->
 
-  
+
 </body>
+
 </html>
